# petty-lang

./: .gitignore  Cargo.toml  rustfmt.toml
examples/: brainfuck.pebble  brainfuck.pty  brute_force.pebble  brute_force.pty  patterns.pebble  patterns.pty
src/: cli.rs  codegen_opts.rs  compile.rs  errors.rs  id.rs  main.rs  span.rs  std.pebble  std.pty  symbol.rs  tests.rs
src/ast/: display.rs  mod.rs
src/ast_analysis/: errors.rs  mod.rs
src/ast_lowering/: mod.rs
src/hir/: display.rs  lower.rs  mod.rs
src/hir_codegen/: mod.rs
src/hir_lowering/: intrinsics.rs  loops.rs  mod.rs  pattern.rs
src/mir/: display.rs  mod.rs  with_places.rs
src/mir_interpreter/: array.rs  mod.rs  value.rs
src/mir_optimizations/: combine_blocks.rs  compress_blocks.rs  const_fold.rs  const_prop.rs  fix_entry_block.rs  mod.rs  not_branch.rs  redundant_blocks.rs  redundant_branch.rs  remove_dead_assignments.rs  remove_dead_blocks.rs  remove_dead_places.rs  remove_goto_terminator.rs  remove_unreachable.rs  utils.rs
src/parse/: ast.rs  expr.rs  lex.rs  mod.rs  token.rs
src/scope/: mod.rs
src/source/: mod.rs  span.rs
src/tests/: arrays.pebble  (+7 more)
tests/: arrays.pebble  chars.pebble  fail_assert.pebble  fail_never.pebble  fail_return.pty  fail_variables.pty  format.pebble  fstrings.pebble  functions.pebble  functions.pty  generics.pebble  generics.pty  if_expr.pebble  logical.pebble  logical.pty  methods.pty  never.pebble  never.pty  patterns.pty  precedence.pebble  recursion.pty  ref.pebble  ref_assignment.pty  refs.pebble  strings.pebble  strings.pty  structs.pebble  tpatterns.pty  variables.pebble
(+7 files in other folders)
