[package]
name = "pebble"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
arcstr = "1.2.0"
clap = { version = "4.5.32", features = ["derive"] }
index_vec = "0.1.4"
miette = { version = "7.5.0", features = ["fancy"] }
symbol_table = { version = "0.4.0", features = ["global"] }
thin-vec = "0.2.13"
typed-arena = "2.0.2"

[profile.release]
panic = "abort"
