[package]
name = "pebble"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unit_arg = "allow"

[dependencies]
arcstr = "1.2.0"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
index_vec = "0.1.4"
miette = { version = "7.5.0", features = ["fancy"] }
rustc-hash = "2.1.1"
symbol_table = { version = "0.4.0", features = ["global"] }
thin-vec = "0.2.13"
typed-arena = "2.0.2"

[profile.release]
panic = "abort"
