[package]
name = "petty"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unit_arg = "allow"
redundant_clone = "warn"

[dependencies]
arcstr = "1.2.0"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
index_vec = "0.1.4"
miette = { version = "7.5.0", features = ["fancy"] }
petty-intern = "0.1.3"
rustc-hash = "2.1.1"
strsim = "0.11.1"
symbol_table = { version = "0.4.0", features = ["global"] }
thin-vec = "0.2.13"

[profile.release]
panic = "abort"
lto = "fat"

[profile.release.package.miette]
opt-level = "z"
